# cheese-engine

./: .gitattributes  .gitignore  .hgignore  CMakeLists.txt  Jenkinsfile  README.md  android.cpp  android.h  android_native_functions.cpp  animation.cpp  animation.h  build  buildForDevMachine  button.cpp  button.h  button_events.cpp  button_events.cpp.txt  button_events.h  ci-cd.py  clean  client_data.cpp  client_data.h  collision.cpp  collision.h  color.cpp  color.h  color2.cpp  color2.h  color_theme.cpp  color_theme.h  console.cpp  console.h  console_commands.cpp  controller.cpp  controller.h  controller_manager.cpp  controller_manager.h  coords.cpp  coords.h  cursor.cpp  (+132 more)
data/: animations  engine elements for different resolutions  engine elements for different resolutions.txt
data/1280x720/: fonts  window_add_server  window_configure_command  window_configure_commands  window_edit_server  window_ingame_menu  window_input_lan_server_password  window_input_server_password  window_lan_server_list  window_main_menu  window_network_connecting  window_notice  window_options  window_options_audio  window_options_graphics  window_options_input  window_options_network  window_server_list  window_server_list_delete  window_server_list_edit  window_start_game  window_start_server
data/256x144/: fonts  window_add_server  window_configure_command  window_configure_commands  window_edit_server  window_ingame_menu  window_input_lan_server_password  window_input_server_password  window_lan_server_list  window_main_menu  window_network_connecting  window_notice  window_options  window_options_audio  window_options_graphics  window_options_input  window_options_network  window_server_list  window_server_list_delete  window_server_list_edit  window_start_game  window_start_server
data/examples/: animations  animations_gui  window_example
development/: build-information  build-information.txt  build-instructions  build-instructions.txt  buildingAndroidDebug.md  code changes for different resolutions.txt  engine-version  engine-version.txt  guiGuidelines.md  guidelines - GUI  guidelines - GUI.txt  guidelines - animation.txt  guidelines - assets  guidelines - assets.txt  ideas  ideas.md  ideas.txt  style guide  template-instructions  template-instructions.txt  to do  to do.txt  toDo.md  workflow
development/android/: android-prep  clean-android  default.properties
development/design/: ideas.md
development/images/: circle.xcf  circle_empty.xcf  cursor_animated.xcf  error.xcf  example_text_box.xcf  logo.xcf  play_games_achievements_gray.xcf  play_games_achievements_green.xcf  play_games_achievements_white.xcf  play_games_controller_gray.xcf  play_games_controller_green.xcf  play_games_controller_white.xcf  play_games_leaderboards_gray.xcf  play_games_leaderboards_green.xcf  play_games_leaderboards_white.xcf  play_games_matches_gray.xcf  play_games_matches_green.xcf  play_games_matches_white.xcf  play_games_savedgames_gray.xcf  play_games_savedgames_green.xcf  play_games_savedgames_white.xcf  touch_controller_dpad.xcf  touch_controller_main.xcf  touch_controller_main_small.xcf  touch_controller_middle.xcf  touch_controller_middle_small.xcf  touch_controller_shoulder_left.xcf  touch_controller_shoulder_right.xcf
development/music/: example.mmpz
docs/: CONTENT-LICENSE-commercial.txt  CONTENT-LICENSE-creativecommons.txt  LICENSE.md  LICENSE.txt  animationGuidelines.md  assetGuidelines.md  buildInstructions.md  contentLicenseCommercial.md  contentLicenseCreativeCommons.md  guiGuidelines.md  style guide  styleGuide.md  template-instructions  templateInstructions.md  textFiles.md  versioning.md  workflow  workflow.md
docs/third-party-licenses/: SDL2  raknet  raknet.txt  zlib.txt
src/: android.h  animation.cpp  animation.h  client_data.h  collision.h  console.cpp  console.h  controller_manager.cpp  cursor.cpp  cursor.h  data_reader.h  dice.h  directories.cpp  engine.cpp  engine.h  engine_data.cpp  engine_math.cpp  engine_math.h  engine_strings.h  engine_version.cpp  engine_version.h  font.cpp  font.h  game_command.cpp  game_command.h  game_manager.cpp  game_manager.h  game_window.cpp  game_window.h  game_world.h  gui_manager.h  gui_object.cpp  image_manager.cpp  image_manager.h  information.cpp  information.h  int_collision.h  int_math.h  int_vector.cpp  internet.h  (+37 more)
src/android/: android.cpp  android.h
src/collision/: collision.cpp  collision.h  coords.cpp  coords.h  quadtree.h
src/color/: color.cpp  color.h  color2.cpp  color2.h
src/console/: console.cpp  console.h  console_commands.cpp
src/controller/: controller.cpp  controller.h  controller_manager.cpp  controller_manager.h  touch_controller.cpp  touch_controller.h
src/data/: data_manager.cpp  data_manager.h  data_reader.cpp  data_reader.h  engine_data.cpp  engine_data.h  object_manager.cpp  object_manager.h  object_manager_getting.cpp  object_manager_loading.cpp
src/file/: directories.cpp  directories.h  file_io.cpp  file_io.h  vfs.cpp  vfs.h
src/game/: game_command.cpp  game_command.h  game_constants_loader.h  game_manager.cpp  game_manager.h  game_world.h
src/image/: image_data.cpp  image_data.h  image_manager.cpp  image_manager.h
src/math/: engine_math.cpp  engine_math.h  math_vector.cpp  math_vector.h
src/music/: music_manager.cpp  music_manager.h
src/network/: client_data.cpp  client_data.h  internet.cpp  internet.h  network_client.cpp  network_client.h  network_engine.cpp  network_engine.h  network_lan_browser.cpp  network_lan_browser.h  network_lockstep.cpp  network_lockstep.h  network_message_identifiers.h  network_server.cpp  network_server.h  server.cpp  server.h
src/options/: game_option.cpp  game_option.h  options.cpp  options.h
src/render/: pixels.cpp  pixels.h  render.cpp  render.h  (+4 more)
tools/: Checksum-Linux-x86_64  android-prep  android-prep-linux-x86_64  android-prep-options  build-date  build-date-linux-x86_64  build-information  checksum-linux-x86_64  ciCd  engineCiCd  generate-game-constants-source  postToFeed  rename-template  rename-template-linux-x86_64  version  version-linux-x86_64
(+202 files in other folders)
